--- a/Mercado-Automacao/src/main/resources/application.properties
+++ b/Mercado-Automacao/src/main/resources/application.properties
@@ -8,3 +8,33 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+######################################################################################################
+# ConfiguraÃ§Ãµes para o envio do e-mail
+# Destino
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+
+# Identificaï¿½ï¿½o do Remetente
+spring.mail.from=noreply@email.com
+
+# Credenciais do Mailtrap (substitua pelos valores corretos)
+spring.mail.username=mercadoautomacaodev@hotmail.com
+spring.mail.password=0deioJava2504
+
+# Autenticaï¿½ï¿½o e Proteï¿½ï¿½o dos dados
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
+
+# Tempo de envio e retorno
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Camada extra de seguranï¿½a (Não use isso com o Mailtrap, pois ele não precisa de SSL diretamente)
+spring.mail.properties.mail.smtp.socketFactory.port=587
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+# Configuraï¿½ï¿½o do servidor
+server.port=8080
