--- a/pom.xml
+++ b/pom.xml
@@ -102,4 +102,14 @@
 
     </dependencies>
 
+         <build>
+    <plugins>
+        <!-- Plugin para empacotar o JAR como executável -->
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
+
 </project>
