--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.mail.port=2525
 spring.mail.properties.mail.debug=true
 debug=true
 
-spring.mail.from=noreply@email.com
-spring.mail.username=b2a624d3793712
-spring.mail.password=5ecd28371e61da
+spring.mail.from=${SPRING_MAIL_FROM}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
