--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mail.port=2525
 spring.mail.properties.mail.debug=true
 debug=true
 
-spring.mail.from=${SPRING_MAIL_FROM}
+spring.mail.from=noreply@email.com
 spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 
