--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${{SPRING_DATASOURCE_URL}}
+spring.datasource.username=${{SPRING_DATASOURCE_USERNAME}}
+spring.datasource.password=${{SPRING_DATASOURCE_PASSWORD}}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -14,9 +14,9 @@ spring.mail.port=2525
 spring.mail.properties.mail.debug=true
 debug=true
 
-spring.mail.from=${SPRING_MAIL_FROM}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.from=${{SPRING_MAIL_FROM}}
+spring.mail.username=${{SPRING_MAIL_USERNAME}}
+spring.mail.password=${{SPRING_MAIL_PASSWORD}}
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -24,4 +24,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-server.port=${PORT:8080}
+server.port=8080
