Mensagem de upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.properties.mail.debug=true
-debug=true
+spring.mail.properties.mail.debug=false
+debug=false
 
 spring.mail.from=noreplay@email.com
 spring.mail.username=${SPRING_MAIL_USERNAME}
@@ -24,3 +24,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 server.port=10000
 server.address=0.0.0.0
+
+app.cors.allowed-origins=${APP_CORS_ALLOWEDORIGINS:http://localhost:3000,http://127.0.0.1:3000,https://fila-free.vercel.app}
