--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_mercado
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
@@ -26,4 +27,4 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 server.port=10000
 server.address=0.0.0.0
 
-app.cors.allowed-origins=${APP_CORS_ALLOWEDORIGINS:http://localhost:3000,http://127.0.0.1:3000,https://fila-free.vercel.app}
+app.cors.allowed-origins=${APP_CORS_ALLOWEDORIGINS:*}
