--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 server.port=10000
 server.address=0.0.0.0
 
-app.cors.allowed-origins=${APP_CORS_ALLOWEDORIGINS:*}
+app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:3000}
+
+
