--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>  <!-- versão oficial disponível -->
+        <version>3.1.4</version>
         <relativePath/>
     </parent>
 
